<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item android:id="@+id/action_refresh"
        android:icon="@android:drawable/ic_input_get"
        android:title="@string/refresh"
        android:visible="false"
        app:showAsAction="never"/>

    <item android:id="@+id/action_order_date"
        android:title="@string/order_by_date"
        android:visible="false"
        app:showAsAction="never"/>

    <item android:id="@+id/action_order_title"
        android:title="@string/order_by_title"
        android:visible="false"
        app:showAsAction="never"/>

    <item android:id="@+id/action_add"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/addnote"
        android:visible="false"
        app:showAsAction="always"/>

</menu>